--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.8",
+    "classnames": "^2.3.1",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.3",
     "ky": "^0.31.1",
