--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-config-next": "12.2.3",
     "ky": "^0.31.1",
     "postcss": "^8.4.16",
+    "react-icons": "^4.4.0",
     "tailwindcss": "^3.1.8",
     "typescript": "4.7.4"
   }
