--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
     "classnames": "^2.3.1",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.3",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^8.0.1",
     "ky": "^0.31.1",
     "postcss": "^8.4.16",
+    "prettier": "^2.7.1",
     "react-icons": "^4.4.0",
     "tailwindcss": "^3.1.8",
     "typescript": "4.7.4"
