--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,9 @@
 {
-  "extends": ["next/core-web-vitals", "prettier"],
+  "extends": ["next", "next/core-web-vitals", "prettier"],
   "plugins": ["prettier"],
   "rules": {
     "prettier/prettier": "warn",
-    "no-console": "warn"
+    "no-console": "warn",
+    "no-unused-vars": "error"
   }
 }
